# avatree

./: CMakeLists.txt  README.md  requirements.txt
figures/: Thumbs.db
src/: CMakeCache.txt  CMakeLists.txt
src/AVATreeExtensionGUI/: CMakeLists.txt  camera.h  mainwindow.cpp  mainwindow.h  model.h  modellerToViewer.cpp  modellerToViewer.h  ray.h
src/AVATreeExtensionGUI/Icons/: icons.qrc
src/AVATreeExtensionGUI/Shaders/: fragShader.glsl.bak  main.qss  vertShader.glsl.bak
src/App/: CMakeLists.txt  bbox.h  camera.cpp  extendv2.cpp  extendv3.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp
src/App/Shaders/: fragShader.glsl  shaders.qrc  vertShader.glsl
src/AppNoLib/: CMakeLists.txt
src/AppV2/: CMakeLists.txt  glwidget.cpp  glwidget.h  mainwindow.ui
src/EmbeddedWebServer/: CMakeLists.txt  CivetServer.h  embedded_cpp.cpp
src/InitSim/: CMakeLists.txt  _main.cpp
src/Modeller/: CMakeLists.txt
src/Modeller/ModelFeatureGeneration/: CMakeLists.txt  _main.cpp
src/Modeller/Modeller/: CMakeLists.txt  adjacency.cpp  analysis.cpp  bbox.cpp  buildTrees.cpp  cellArray.cpp  connectivity.cpp  decimation.cpp  deformation.cpp  density.cpp  distance.cpp  dotOBJClassDiagram.cd  editing.cpp  geodesicDistance.cpp  ggraph.cpp  gnode.cpp  helper.cpp  interpolation.cpp  io.cpp  laplacian.cpp  multiobj.cpp  obj.cpp  pca.cpp  plane.cpp  procedure.cpp  project.cpp  segmentation.cpp  selection.cpp  simulation.cpp  skeleton.cpp  skeletonizationNarrowing.cpp  skeletonizationNarrowingSparse.cpp  smoothing.cpp  surfaceEditing.cpp  testing.cpp  timer.cpp  transform.cpp  treeGeneration.cpp  volume.cpp  volumeFilling.cpp
src/Modeller/Modeller/include/: cellArray.h  cgal.h  dObject.h  definitions.h  dotObj.h  helper.h  lungModelling.h  obj.h  procedure.h  project.h  simulation.h  treeGeneration.h  vox.h
src/Modeller/ModellerExecutable/: CMakeLists.txt  _main.cpp  _other.cpp
src/Modeller/PoissonRecon/: Geometry.h  MultiGridOctreeData.System.inl  MultiGridOctreeData.h  Ply.h  PoissonRecon.cpp  SSDRecon.cpp  SparseMatrix.h
src/Modeller/PoissonRecon/SSDRecon/: SSDRecon.cpp
src/Modeller/PoissonRecon/SurfaceTrimmer/: SurfaceTrimmer.cpp
src/WebServer/: CMakeLists.txt  client_http.hpp  config.h  lungModellingServer.cpp  modellerToViewer.cpp  modellerToViewer.h  server_http.hpp
src/WebServer/depricated/: http_examples.cpp  http_examples.cpp.bak  lungModellingServer.cpp
src/WebServer/tests/: CMakeLists.txt  io_test.cpp  parse_test.cpp
