# Minimum required version of CMake
cmake_minimum_required(VERSION 2.8)


set(TARGETDUMMY InitSim CACHE TYPE STRING)
project(${TARGETDUMMY})
file(GLOB TARGETDUMMY_SRC
	"*.h"
	"*.cpp"
)

#set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR} )
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR} )


add_executable(${TARGETDUMMY} ${TARGETDUMMY_SRC})





